[INFER] Don't mark temporaries as copies of other entries when storing their copies to a variable, bug 659438.